[package]
name = "hello-fn"
version = "0.1.0"
authors = ["clarkhao"]
edition = "2021"
license = "MIT"
homepage = "https://example.com/"
repository = "https://github.com/clarkhao/cargo-fn"
documentation = "https://example.com/docs"
description = """
hello fn, a test.
"""
[profile.release]
debug = true # enable debug symbols in release builds

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
